# chatgpterminal

./: README.md  conversation.py  main.py  pyproject.toml  test.py
chatgpterminal/: conversation.py  main.py  settings.py
chatgpterminal/sys_dialogue/: help.txt
sys_dialogue/: model.txt
