[tool.poetry]
name = "chatgpterminal"
version = "0.1.2"
description = ""
authors = ["Artur Dernst <artur.dernst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
pygments = "^2.17.2"
openai = "0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gpt = 'chatgpterminal.main:main'
